# recode-website

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  components.json  docusaurus.config.ts  package-lock.json  package.json  postcss.config.ts  pyproject.toml  requirements-dev.txt  tsconfig.json  validate_config.py
.github/workflows/: autocomment-iss-label.yml  autocomment-iss-raise.yml  autocomment-pr-raise.yml  lint.yml
backend/: __init__.py  test_user_service.py  user_service.py
blog/: authors.yml
blog/2025-01-21/: ui-ux-web-design-principle.md
blog/getting-started-with-mern/: index.md
blog/getting-started-with-microservices/: index.md
blog/getting-started-with-vite/: index.md
blog/git-coding-agent/: index.md
blog/google-backlinks/: index.md
blog/google-deepmind/: index.md
blog/streamline-ux-ui/: index.md
blog/ux-designers-ai/: index.md
blog/ux-ui-design-job/: index.md
community/: Learn.md  contributing-guidelines.md  index.md  our-documentation.md  team.md  terms-conditions.md  understand-lint-checks.md
docs/GitHub/: _category_.json  intro-github.md  setup-environment.md
docs/Google-Student-Ambassador/: _category_.json
docs/Nextjs/: _category_.json  git-commands.md  setup-environment.md
docs/Technical/: _category_.json  intro-github.md
docs/css/: _category_.json  how-html-works.md
docs/html/: intro-html.md
docs/python/: _category_.json  code-quality-setup.md  datatype-python.md  intro-html.md  intro-python.md  python-casting.md  python-dictionaries.md  python-list.md  python-set.md  python-string.md  python-syntax.md  python-tuple.md  python-variables.md  python_operators.md  setup-environment.md
docs/sql/: _category_.json  intro-sql.md  setup-environment.md
src/components/: TeamSidebar.css  TeamSidebar.tsx  giscus.tsx  (+3 more)
(+151 files in other folders)
